src/test/resources/inspections/codeError/FileClassnameCaseInspection/NonRooted.php
<?php

if (!class_exists("Dummy")) {
    class <error descr="🔨 PHP Hammer: class name (\"DummyNonRooted\") does not match the file that stores it (\"NonRooted.php\").">DummyNonRooted</error> {
    }
}
